[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/UI/QuitGame.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/bigfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Pressed2.tres" type="StyleBox" id=4]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Normal2.tres" type="StyleBox" id=5]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Normal_Green.tres" type="StyleBox" id=6]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Normal_Red.tres" type="StyleBox" id=7]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Pressed_Green.tres" type="StyleBox" id=8]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Hover_Green.tres" type="StyleBox" id=9]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Pressed_Red.tres" type="StyleBox" id=10]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Hover_Red.tres" type="StyleBox" id=11]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.243137, 0.180392, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.188235, 0.0862745, 0.231373, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2( -15, 15 )
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="QuitGame" type="Panel"]
pause_mode = 2
anchor_left = 0.533
anchor_top = 0.5
anchor_right = 0.533
anchor_bottom = 0.5
margin_left = -127.68
margin_top = -78.0
margin_right = 128.32
margin_bottom = 82.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_right = 72.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -40.0
margin_right = -7.0
margin_bottom = -14.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -40.0
margin_right = 64.0
margin_bottom = -14.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="Button" parent="."]
margin_left = 88.0
margin_top = 80.0
margin_right = 168.0
margin_bottom = 110.0
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
pressed = true
text = "Music On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 72.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="YesButton" to="." method="_on_YesButton_button_up"]
[connection signal="button_up" from="ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="toggled" from="MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
